game algorith process

--- a/_dev/html/components/shared.html
+++ b/_dev/html/components/shared.html
@@ -1,35 +1,3 @@
-<div class="start-pop">
-    <!--<div class="text">
-        Какой-то текст, если нужен
-    </div>-->
-    <div class="start play">
-        <div>
-            <img src="images/startscreen-btn-h.png" alt=""/>
-            <img src="images/startscreen-btn.png" alt=""/>
-        </div>
-        <div>
-            <img src="images/startscreen-cont-btn-h.png" alt=""/>
-            <img src="images/startscreen-cont-btn.png" alt=""/>
-        </div>
-    </div>
-    <div class="start load">
-        <img src="images/startscreen-load-btn.png" alt=""/>
-        <img src="images/startscreen-load-btn-h.png" alt=""/>
-    </div>
-</div>
-<!--<div class="s-ctrls">
-    <div class="continue">
-        <img src="images/startscreen-btn-continue.svg" alt=""/>
-        <img src="images/startscreen-btn-continue-h.svg" alt=""/>
-    </div>
-    <div class="clr hoverable">
-        <img src="images/startscreen-btn-restart.svg" alt=""/>
-        <img src="images/startscreen-btn-restart-h.svg" alt=""/>
-    </div>
-</div>-->
-<div class="loader-pop">
-    <div class="l"></div>
-</div>
 <div class="special-btns"><div class="inner"></div></div>
 <div class="info-pop">
     <div class="caller"></div>
@@ -78,7 +46,7 @@
                             <div class="the-code">
                                 <div class="code"><span></span></div>
                                 <input type="text" class="code-hidden"/>
-                                <div class="btn copy">скопировать код<br/>в буфер обмена</div>
+                                <div class="the-btn copy">скопировать код<br/>в буфер обмена</div>
                             </div>
                             <div class="or-copy">
                                 Или вы можете схоранить себе qr-код и воспользоваться сканером на устройстве.
@@ -89,7 +57,7 @@
                         <div class="block">
                             <div class="the-code">
                                 <input placeholder="Введите ваш код" type="text" class="code-input"/>
-                                <div class="btn go">Загрузить</div>
+                                <div class="the-btn go">Загрузить</div>
 <!--                                <div class="err-text"></div>-->
                             </div>
                         </div>
@@ -137,7 +105,7 @@
     </div>
 </div>
 <div class="game-pop">
-    <div class="caller"></div>
+    <div class="caller"><span></span></div>
     <div class="inner">
         <div class="block">
             <div class="choose">
@@ -146,6 +114,7 @@
             <div class="choose">
                 <div>Ольга</div>
             </div>
+            <div class="secret"></div>
             <img src="images/game/g-select-l.svg" alt="" class="ch-hover"/>
             <img src="images/game/g-select-r.svg" alt="" class="ch-hover"/>
             <div class="ch-text"><span>Выбери персонажа</span></div>
@@ -163,6 +132,7 @@
         <div class="block">
             <img class="g-bg" src="images/game/base.jpg" alt=""/>
             <img class="g-bg" src="images/game/man.png" alt=""/>
+            <img class="g-bg" src="images/game/base.jpg" alt=""/>
             <img class="g-bg" src="images/game/secret.png" alt=""/>
             <div class="g-close"></div>
             <img class="g-btn" src="images/game/btn-off.png" alt=""/>
@@ -222,9 +192,35 @@
                     <div class="s-d-inner"></div>
                 </div>
             </div>
-            <div class="btn">Сыграть еще раз</div>
+            <div class="the-btn">Сыграть еще раз</div>
         </div>
     </div>
+</div>
+<div class="start-pop">
+    <div class="logo"></div>
+    <div class="wrap">
+        <div class="start play">
+            <div>
+                <img src="images/startscreen-btn.svg" alt=""/>
+                <img src="images/startscreen-btn-h.svg" alt=""/>
+                <span>Начать</span>
+            </div>
+            <div>
+                <img src="images/startscreen-btn.svg" alt=""/>
+                <img src="images/startscreen-btn-h.svg" alt=""/>
+                <span>Продолжить</span>
+            </div>
+        </div>
+        <div class="start load">
+            <img src="images/startscreen-btn.svg" alt=""/>
+            <img src="images/startscreen-btn-h.svg" alt=""/>
+            <span>Загрузить</span>
+        </div>
+    </div>
+    <div class="pane"></div>
+</div>
+<div class="loader-pop">
+    <div class="l"></div>
 </div>
 <div class="achievement-pop">
     <div class="into"></div>
