--- a/_dev/html/components/shared-tmpls.html
+++ b/_dev/html/components/shared-tmpls.html
@@ -18,7 +18,7 @@
 </script>
 <script type="text/template" id="info-art-template">
     <% for(let i=0;i<articles.length;i++){ %>
-    <div class="article-item">
+    <div class="article-item<%= articles[i].disabled?' disabled':'' %>">
         <img src="<%= articles[i].bg %>" alt="" class="a-bg"/>
         <div class="a-cont">
             <div class="a-h"><span><%= articles[i].h %></span></div>
