--- a/_dev/scss/components/_info-pop.scss
+++ b/_dev/scss/components/_info-pop.scss
@@ -11,12 +11,17 @@
     &.shown{
       visibility:visible;
       .caller{
-        background-image:url(#{$path}/icons/icon-close.svg);
+        background-image:url(#{$path}icons/icon-close.svg);
       }
       .inner{
         opacity:1;
         @include trs('opacity #{$anim} ease-in-out');
       }
+    }
+    &:before{
+      content:'';
+      @include abs($l:-50vw,$r:-50vw,$t:-50vh,$b:-50vh);
+      background:#000;
     }
     .caller{
       @include abs($t:3em,$r:3.7rem - 1.66*.75rem);
@@ -26,8 +31,8 @@
       visibility:hidden;
       z-index:1;
       -webkit-tap-highlight-color: rgba(0,0,0,0);
-      background:url(#{$path}/icons/icon-menu.svg) center/cover no-repeat;
-      .start &,.fromLoad &{
+      background:url(#{$path}icons/icon-menu.svg) center/cover no-repeat;
+      .start &,.always &{
         visibility:visible;
       }
     }
@@ -40,7 +45,7 @@
       font-size:.6em;
     }
     .lottie{
-      @include abs($l:10.5em,$t:2.5em);
+      @include abs($l:10.7em,$t:2.5em);
       width:28em;
       height:324/386*28em;
       @include med(){
@@ -188,26 +193,13 @@
         }
       }
     }
-    .btn{
-      text-transform:uppercase;
-      width:14em;
-      height:60/272*14em;
-      background: url(#{$path}info-pop/btn.svg) no-repeat;
-      @include flx(display,flex);
-      @include flx(align-items,center);
-      font-size:1.6em;
-      text-decoration:none;
-      line-height:1;
-      color:#000;
+    .the-btn{
       padding-left:1em;
       margin-left:2em;
-      cursor:pointer;
-      @extend %bxz;
+      background: url(#{$path}info-pop/btn.svg) no-repeat;
       @include med(){
-        font-size:1em;
         &:hover{
           background-image:url(#{$path}info-pop/btn-h.svg);
-          color:#fff;
         }
       }
     }
@@ -321,7 +313,7 @@
       margin-top:4em;
       width:48%;
       border:2px dashed #fff;
-      padding:1.5em 2em;
+      padding:calc(1.5em + 4px) 2em;
       position:relative;
       opacity:.5;
       @extend %bxz;
