--- a/_dev/scss/components/_main.scss
+++ b/_dev/scss/components/_main.scss
@@ -76,20 +76,19 @@
 
     }
     .h-b-h{
-      text-transform:uppercase;
       width:100%;
-      font-size:1.4em;
-      font-weight:300;
+      font-size:3.8em;
+      font-weight:700;
     }
     .h-b-text{
-      margin-top:3em;
-      font-size:.85em;
+      margin-top:2em;
+      font-size:1.6em;
       @include med(){
-        margin-top:4.5em;
-        font-size:.7em;
+        margin-top:2.5em;
+        font-size:1em;
       }
       a{
-        color:#b6837e;
+        color:getc(grn);
       }
     }
     .h-b-var:not(:first-child){
@@ -105,56 +104,26 @@
         height:100%;
       }
     }
-    .h-b-btn{
-      width:11em;
-      height:192/100*4em;
-      @include center($r:-20em);
-      cursor:pointer;
-      -webkit-tap-highlight-color: rgba(0,0,0,0);
-      @include flx(display,flex);
-      @include flx(align-items,center);
-      @include med(){
-        right:-15em;
-      }
-      span{
-        text-transform:uppercase;
-        font-size:1.4em;
-        background:linear-gradient(90deg,#DF8998,#E5B99D 90%);
-        -webkit-text-fill-color:transparent;
-        -webkit-background-clip:text;
-      }
-      .l{
-        @include abs($r:0,$t:0);
-        width:4em;
-        height:100%;
-      }
-    }
   }
   //---
   .the-btn{
-    width:18em;
+    text-transform:uppercase;
+    width:14em;
+    height:60/272*14em;
+    background: url(#{$path}info-pop/btn.svg) no-repeat;
+    @include flx(display,flex);
+    @include flx(align-items,center);
+    font-size:1.6em;
+    text-decoration:none;
+    line-height:1;
+    color:#000;
     cursor:pointer;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    .l{
-      @include abs($l:0, $r:0);
-      height:130/520*18em;
-    }
-    .btn-h{
-      height:4em;
-      line-height:4em;
-      margin-bottom:1.2em;
-      position:relative;
-
-      div{
-        font-size:1.3em;
-        font-weight:300;
-      }
-    }
-    .btn-sh{
-      font-size:.95em;
-      pointer-events:none;
-      @include med(){
-        font-size:.8em;
+    @extend %bxz;
+    @include med(){
+      font-size:1em;
+      &:hover{
+        background-image:url(#{$path}info-pop/btn-h.svg);
+        color:#fff;
       }
     }
   }
@@ -311,7 +280,7 @@
   .loader-pop{
     @include abs($l:0,$r:0,$t:0,$b:0);
     @include trs('opacity #{$anim} ease-in-out');
-    z-index:1;
+    z-index:2;
     background:#000;
 
     .loaded &{
@@ -325,6 +294,7 @@
       background:url(#{$path}loader.png) center no-repeat;
     }
   }
+  //---
   .orientation-pop{
     color:#fff;
     @include abs($l:0,$r:0,$t:0,$b:0);
@@ -351,6 +321,7 @@
       width:80%;
     }
   }
+  //---
   .start-pop{
     @include abs($l:0,$r:0,$t:0,$b:0);
     @include flx(display,flex);
@@ -364,58 +335,46 @@
       opacity:0;
       pointer-events:none;
     }
-    .text{
-      margin-top:7em;
-      width:100%;
-      color:#fff;
-      text-align:center;
-      font-size:1.5em;
+    .logo{
+      @include abs($l:0,$r:0,$t:0,$b:0);
+      background: url(#{$path}start-logo.svg) center/cover no-repeat;
     }
-    .icons{
-      margin:-3em 10% 0 10%;
-      width:80%;
+    .wrap{
+      @include center();
+      width:50em;
+      margin-top:10em;
       @include flx(display,flex);
-      @include flx(justify-content,center);
-      @include flx(align-items,center);
-      img{
-        width:20em;
-        margin:0 10em;
-        &:nth-child(2){
-          display:none;
-        }
-        @include med(-400px){
-          &:nth-child(2){
-            display:block;
-          }
-        }
-      }
+      @include flx(justify-content,space-between);
     }
     .start{
-      width:30em;
-      height:109/492*30em;
-      margin:auto 1em 2em 1em;
-      position:relative;
+      width:20em;
+      height:60/272*30em;
       cursor:pointer;
+      position:relative;
+      color:getc(dark);
       -webkit-tap-highlight-color: rgba(0,0,0,0);
-      &.play{
-        @include med(){
-          &:hover{
-            img+img{
-              opacity:0;
-            }
-          }
-        }
-      }
-      &.load{
-        @include med(){
-          &:hover{
-            img+img{
+      @include med(){
+        &:hover{
+          color:#fff;
+          img{
+            opacity:0;
+            &+img{
               opacity:1;
             }
           }
         }
-        img+img{
-          opacity:0;
+      }
+      &.play{
+        span{
+          right:1em;
+        }
+      }
+      &.load{
+        img{
+          @include trf(scale(-1,1));
+        }
+        span{
+          left:1em;
         }
       }
       .goOn & div{
@@ -435,6 +394,14 @@
         width:100%;
         height:100%;
         @include trs('opacity #{$anim} ease-in-out');
+        &+img{
+          opacity:0;
+        }
+      }
+      span{
+        text-transform:uppercase;
+        font-size:1.5em;
+        @include center($f:v);
       }
     }
   }
@@ -510,6 +477,10 @@
         }
       }
     }
+    &.disabled{
+      pointer-events:none;
+      opacity:.3;
+    }
     &:nth-child(1),&:nth-child(2){
       margin-top:1.5em;
     }
@@ -518,8 +489,8 @@
       width:100%;
     }
     .a-cont{
-      border:2px solid #fff;
       padding:1.5em 2em;
+      border:2px solid #fff;
       @include abs($l:0,$r:0,$t:0,$b:0);
     }
     .a-icon{
